@@ -466,6 +466,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #13609: Add two functions to query the terminal size:
+  os.get_terminal_size (low level) and shutil.get_terminal_size (high level).
+  Patch by Zbigniew Jędrzejewski-Szmek.
+
 - Issue #13845: On Windows, time.time() now uses GetSystemTimeAsFileTime()
   instead of ftime() to have a resolution of 100 ns instead of 1 ms (the clock
   accuracy is between 0.5 ms and 15 ms).
